# ferrumena

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  呆站搜索句法帮助.md
src/: api.rs  cli.rs  config.rs  downloader.rs  error.rs  main.rs  utils.rs
src/api/: client.rs  models.rs
