[package]
name = "ferrumena"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
dotenvy = "0.15.7"
envy = "0.4.2"
governor = "0.10.4"
rand = "0.10.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
