[package]
name = "ferrumena"
version = "0.2.0-beta"
edition = "2024"
authors = ["RiverMint 67481978@qq.com"]
description = "异步 Philomena 图片下载器 (An asynchronous image downloader for Philomena-based sites)"
license = "Apache-2.0"
repository = "https://github.com/RiverMint78/ferrumena"
keywords = ["downloader", "philomena", "async", "images", "derpibooru"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
envy = "0.4"
governor = "0.10"
rand = "0.10"
reqwest = "0.13"
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "fs",
] }
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = "z"
panic = "abort"